Updating class links

--- a/content/class/07-class.html
+++ b/content/class/07-class.html
@@ -26,6 +26,7 @@ editor_options:
 
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
+<p><a href="/assignment/07-lab">link</a></p>
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
@@ -33,4 +34,6 @@ editor_options:
 </div>
 <div id="links" class="section level2">
 <h2>Links</h2>
+<p>Here is an extended example of web scraping (<a href="https://github.com/USCbiostats/PM566/tree/df4f275d56c23c47ce7e0d9791c2bb384819af8c#latest-weeks-cross-reference">link</a>)
+that will be featured in the class.</p>
 </div>
