Working on lab 9

--- a/content/assignment/09-lab.html
+++ b/content/assignment/09-lab.html
@@ -4,51 +4,96 @@ output: tufte::tufte_html
 link-citations: yes
 ---
 
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="learning-goals" class="section level1">
 <h1>Learning goals</h1>
 <p>In this lab, you are expected to learn/put in practice the following skills:</p>
 <ul>
-<li>Write a simulation program</li>
-<li>Use the parallel package to parallelize your simulation</li>
-<li>Run the simulation on AWS</li>
+<li>Evaluate whether a problem can be parallelized or not.</li>
+<li>Practice with the parallel package.</li>
+<li>Practice your skills with Git.</li>
 </ul>
+<div id="problem-1-think" class="section level2">
+<h2>Problem 1: Think</h2>
+<p>Give yourself a few minutes to think about what you just learned. List three
+examples of problems that you believe may be solved using parallel computing,
+and check for packages on the HPC CRAN task view that may be related to it.</p>
 </div>
-<div id="part-one-yeat-another-coronavirus-simulation" class="section level1">
-<h1>Part one: Yeat Another Coronavirus Simulation</h1>
-<p>During this week’s lecture, we saw an example of a simulation program that models SARS-CoV2 using a bi-dimensional torus. In that example, individuals were embedded in a grid (torus), each having a total of 8 neighbors, and were For this week’s lab, you will have to write a simulation program similar to that featured during the lecture and speed up it up using parallel computing.</p>
-<p>The simulation should work under the following rules:</p>
+<div id="problem-2-before-you" class="section level2">
+<h2>Problem 2: Before you</h2>
+<p>The following functions can be written to be more efficient without using
+parallel:</p>
 <ol style="list-style-type: decimal">
-<li><p>The world is the contour of a circle.</p></li>
-<li><p>Each individual has two neighbors (left and right), each representing an independent opportunity of either passing or acquiring the disease.</p></li>
-<li><p>As before, the probability of transmission depends on who wears a face-mask.</p></li>
-<li><p>There are four possible states: susceptible, infected, recovered, and deceased.</p></li>
-<li><p>Time is discrete.</p></li>
-<li><p>The simulation starts with x% of individuals with the virus, with m of them willing to wear the face-mask.</p></li>
+<li>This function generates a <code>n x k</code> dataset with all its entries distributed
+poission with mean <code>lambda</code>.</li>
 </ol>
-<p>The simulation program should have the following optional parameters: number of steps, the initial number of infected, and the number of people wearing the mask.</p>
-<p>The questions are the following:</p>
-<ol style="list-style-type: decimal">
-<li>Using the simulation program, compute the 95% confidence interval (CI) for the number of deceased individuals under the following parameters:</li>
-</ol>
-<ul>
-<li><p>A population of size 1,000</p></li>
-<li><p>10 individuals have the disease</p></li>
-<li><p>Half of the population wears the mask</p></li>
-<li><p>Simulating a thousand scenarios, each with 20 time points.</p></li>
-</ul>
+<pre class="r"><code>fun1 &lt;- function(n = 100, k = 4, lambda = 4) {
+  x &lt;- NULL
+  for (i in 1:n)
+    x &lt;- rbind(x, rpois(k, lambda))
+}</code></pre>
 <ol start="2" style="list-style-type: decimal">
-<li>What would be the 95% CI if three quarters of the population wears the face-masks?</li>
+<li>Find the column max (hint: Checkout the function <code>max.col()</code>).</li>
 </ol>
-<p>A solution (the simulation program, actually) can be found in the website (file named sars-cov2-circle.R).</p>
+<pre class="r"><code># Data Generating Process (10 x 10,000 matrix)
+set.seed(1234)
+x &lt;- matrix(rnorm(1e4), nrow=10)
+
+# Find each column&#39;s max value
+fun2 &lt;- function(x) {
+  apply(x, 2, max)
+}</code></pre>
 </div>
-<div id="part-2-speedup-the-simulation" class="section level1">
-<h1>Part 2: Speedup the simulation</h1>
-<p>Using the <code>paralle</code> R package (or any other method), speedup the simulation and measure how much faster the parallel version runs. Is it linear speedup?</p>
+<div id="problem-3-parallelize-everyhing" class="section level2">
+<h2>Problem 3: Parallelize everyhing</h2>
+<p>We will now turn our attention to non-parametric
+<a href="https://en.wikipedia.org/wiki/Bootstrapping_(statistics)">bootstrapping</a>.
+Among the many uses, non-parametric bootstrapping allow us to obtain confidence
+intervals for parameter estimates without relying on parametric assumptions.</p>
+<p>The main assumption is that we can approximate many experiments by resampling
+observations from our original dataset.</p>
+<p>El método de Bootstrap (Efron 1979) (o remuestreo) puede ser utilizado para aproximar distribuciones de estadísticos de manera no-paramétrica–que significa sin asumir una forma funcional en particular–con el simple supuesto de que la muestra observada refleja la distribución de la población.</p>
+<p>La siguiente función implementa bootstrap noparamétrico de manera secuencial (no en paralelo)</p>
+<pre><code>mi_boot &lt;- function(dat, stat, R, ncpus = 1L) {
+  
+  # Generando indices aleatorios
+  n &lt;- nrow(dat)
+  idx &lt;- matrix(sample.int(n, n*R, TRUE), nrow=n, ncol=R)
+ 
+  # Creando cluster 
+  # ..... ACA VA EL CODIGO PARA ARMAR EL CLUSTER
+  
+  # Llamando funcion
+  # ...... ESTA FUNCION DEBE SER REEMPLAZADA POR parSapply...
+  t(sapply(seq_len(R), function(i) {
+    stat(dat[idx[,i], , drop=FALSE])
+  }))
+  
+}
+# Bootstrap the modelo OLS
+mi_stat &lt;- function(d) coef(lm(y ~ x, data=d))
+
+# Simulando data
+set.seed(1)
+n &lt;- 500; R &lt;- 1e4
+
+x &lt;- cbind(rnorm(n)); y &lt;- x*5 + rnorm(n)
+
+# Chequeando que obtenemos datos razonables. Boot puede ser comparado con el 
+# intervalo de confianza que obtenemos de la regresion lineal.
+ans0 &lt;- confint(lm(y~x))
+ans1 &lt;- mi_boot(dat = data.frame(x, y), mi_stat, R = R, ncpus = 2L)
+
+# Comparando IC con el bootstrap rustico y el modelo OLS.
+t(apply(ans1, 2, quantile, c(.025,.975)))
+##                   2.5%      97.5%
+## (Intercept) -0.1372435 0.05074397
+## x            4.8680977 5.04539763
+ans0
+##                  2.5 %     97.5 %
+## (Intercept) -0.1379033 0.04797344
+## x            4.8650100 5.04883353</code></pre>
+<p>Siguiendo los comentarios incluidos en el cuerpo de la función, modifica la función para que implemente bootstrapping en paralelo. Compara tus resultados utilizando 1, 2 y (si disponible) 4 procesadores.</p>
 </div>
-<div id="part-4-using-cloud-computing" class="section level1">
-<h1>Part 4: Using cloud computing</h1>
-<p>Using the AWS account set up for you, submit the simulation using R CMD BATCH and retrieve the results from the EC2 instance.</p>
 </div>
