--- a/content/class/09-class.html
+++ b/content/class/09-class.html
@@ -26,16 +26,16 @@ editor_options:
 
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
-<p><a href="/assignment/10-lab/">link</a></p>
+<p><a href="/assignment/09-lab/">link</a></p>
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
-<p><a href="/slides/10-hpc/slides.html">link</a></p>
+<p><a href="/slides/09-hpc/slides.html">link</a></p>
 </div>
 <div id="links" class="section level2">
 <h2>Links</h2>
 <ul>
-<li><a href="https://git-scm.com">Git</a></li>
-<li><a href="https://github.com">GitHub</a></li>
+<li>CRAN Task View on High-Performance Computing <a href="https://CRAN.R-project.org/view=HighPerformanceComputing">(link)</a></li>
+<li>USC’s Center for Advance Research Computing (CARC) <a href="https://carc.usc.edu">(link)</a></li>
 </ul>
 </div>
