--- a/content/assignment/09-lab.html
+++ b/content/assignment/09-lab.html
@@ -1,5 +1,5 @@
 ---
-title: "Lab 10 - HPC"
+title: "Lab 9 - HPC"
 output: tufte::tufte_html
 link-citations: yes
 ---
@@ -49,43 +49,52 @@ fun2 &lt;- function(x) {
 <h2>Problem 3: Parallelize everyhing</h2>
 <p>We will now turn our attention to non-parametric
 <a href="https://en.wikipedia.org/wiki/Bootstrapping_(statistics)">bootstrapping</a>.
-Among the many uses, non-parametric bootstrapping allow us to obtain confidence
+Among its many uses, non-parametric bootstrapping allow us to obtain confidence
 intervals for parameter estimates without relying on parametric assumptions.</p>
 <p>The main assumption is that we can approximate many experiments by resampling
-observations from our original dataset.</p>
-<p>El método de Bootstrap (Efron 1979) (o remuestreo) puede ser utilizado para aproximar distribuciones de estadísticos de manera no-paramétrica–que significa sin asumir una forma funcional en particular–con el simple supuesto de que la muestra observada refleja la distribución de la población.</p>
-<p>La siguiente función implementa bootstrap noparamétrico de manera secuencial (no en paralelo)</p>
-<pre><code>mi_boot &lt;- function(dat, stat, R, ncpus = 1L) {
+observations from our original dataset, which reflects the population.</p>
+<p>This function implements the non-parametric bootstrap:</p>
+<pre class="r"><code>my_boot &lt;- function(dat, stat, R, ncpus = 1L) {
   
-  # Generando indices aleatorios
+  # Getting the random indices
   n &lt;- nrow(dat)
   idx &lt;- matrix(sample.int(n, n*R, TRUE), nrow=n, ncol=R)
  
-  # Creando cluster 
-  # ..... ACA VA EL CODIGO PARA ARMAR EL CLUSTER
+  # Making the cluster using `ncpus`
+  # STEP 1: GOES HERE
+  # STEP 2: GOES HERE
   
-  # Llamando funcion
-  # ...... ESTA FUNCION DEBE SER REEMPLAZADA POR parSapply...
-  t(sapply(seq_len(R), function(i) {
+    # STEP 3: THIS FUNCTION NEEDS TO BE REPLACES WITH parLapply
+  ans &lt;- lapply(seq_len(R), function(i) {
     stat(dat[idx[,i], , drop=FALSE])
-  }))
+  })
   
-}
-# Bootstrap the modelo OLS
-mi_stat &lt;- function(d) coef(lm(y ~ x, data=d))
+  # Coercing the list into a matrix
+  ans &lt;- do.call(rbind, ans)
+  
+  # STEP 4: GOES HERE
+  
+  ans
+  
+}</code></pre>
+<ol style="list-style-type: decimal">
+<li>Use the previous pseudocode, and make it work with parallel. Here is just an example
+for you to try:</li>
+</ol>
+<pre class="r"><code># Bootstrap of an OLS
+my_stat &lt;- function(d) coef(lm(y ~ x, data=d))
 
-# Simulando data
+# DATA SIM
 set.seed(1)
 n &lt;- 500; R &lt;- 1e4
 
 x &lt;- cbind(rnorm(n)); y &lt;- x*5 + rnorm(n)
 
-# Chequeando que obtenemos datos razonables. Boot puede ser comparado con el 
-# intervalo de confianza que obtenemos de la regresion lineal.
+# Checking if we get something similar as lm
 ans0 &lt;- confint(lm(y~x))
-ans1 &lt;- mi_boot(dat = data.frame(x, y), mi_stat, R = R, ncpus = 2L)
+ans1 &lt;- my_boot(dat = data.frame(x, y), mi_stat, R = R, ncpus = 2L)
 
-# Comparando IC con el bootstrap rustico y el modelo OLS.
+# You should get something like this
 t(apply(ans1, 2, quantile, c(.025,.975)))
 ##                   2.5%      97.5%
 ## (Intercept) -0.1372435 0.05074397
@@ -94,6 +103,20 @@ ans0
 ##                  2.5 %     97.5 %
 ## (Intercept) -0.1379033 0.04797344
 ## x            4.8650100 5.04883353</code></pre>
-<p>Siguiendo los comentarios incluidos en el cuerpo de la función, modifica la función para que implemente bootstrapping en paralelo. Compara tus resultados utilizando 1, 2 y (si disponible) 4 procesadores.</p>
+<ol start="2" style="list-style-type: decimal">
+<li>Check whether your version actually goes faster than the non-parallel version:</li>
+</ol>
+<pre class="r"><code>microbenchmark::microbenchmark(
+  one_core = my_boot(dat = data.frame(x, y), mi_stat, R = R, ncpus = 1L),
+  two_core = my_boot(dat = data.frame(x, y), mi_stat, R = R, ncpus = 2L)
+)</code></pre>
+</div>
+<div id="problem-4-compile-this-markdown-document-using-rscript" class="section level2">
+<h2>Problem 4: Compile this markdown document using Rscript</h2>
+<p>Once you have saved this Rmd file, try running the following command
+in your terminal:</p>
+<pre class="bash"><code>Rscript --vanilla -e &#39;rmarkdown::render(&quot;[full-path-to-your-Rmd-file.Rmd]&quot;)&#39; &amp;</code></pre>
+<p>Where <code>[full-path-to-your-Rmd-file.Rmd]</code> should be replace with the full path to
+your Rmd file… :).</p>
 </div>
 </div>
