Updating lab (again)

--- a/content/assignment/09-lab.html
+++ b/content/assignment/09-lab.html
@@ -12,6 +12,7 @@ link-citations: yes
 <ul>
 <li>Evaluate whether a problem can be parallelized or not.</li>
 <li>Practice with the parallel package.</li>
+<li>Use Rscript to submit jobs</li>
 <li>Practice your skills with Git.</li>
 </ul>
 <div id="problem-1-think" class="section level2">
