--- a/content/assignment/11-hw4.html
+++ b/content/assignment/11-hw4.html
@@ -3,7 +3,6 @@ title: "Assignment 04 - HPC and SQL"
 output: tufte::tufte_html
 ---
 
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="due-date" class="section level2">
@@ -19,7 +18,7 @@ output: tufte::tufte_html
 <pre class="r"><code># Total row sums
 fun1 &lt;- function(mat) {
   n &lt;- nrow(mat)
-  ans &lt;- double(n)
+  ans &lt;- double(n) 
   for (i in 1:n) {
     ans[i] &lt;- sum(mat[i, ])
   }
@@ -30,14 +29,14 @@ fun1alt &lt;- function(mat) {
   # YOUR CODE HERE
 }
 
-# Cumulative product by row
+# Cumulative sum by row
 fun2 &lt;- function(mat) {
   n &lt;- nrow(mat)
-  K &lt;- ncol(mat)
+  k &lt;- ncol(mat)
   ans &lt;- mat
   for (i in 1:n) {
-    for (j in 2:k)
-      ans[i,j] &lt;- mat[i, k] + ans[i, k - 1]
+    for (j in 2:k) {
+      ans[i,j] &lt;- mat[i, j] + ans[i, j - 1]
     }
   }
   ans
@@ -55,13 +54,13 @@ dat &lt;- matrix(rnorm(200 * 100), nrow = 200)
 # Test for the first
 microbenchmark::microbenchmark(
   fun1(dat),
-  fun1alt(dat), unit = “relative”, check = “equivalent”
+  fun1alt(dat), unit = &quot;relative&quot;, check = &quot;equivalent&quot;
 )
 
 # Test for the second
 microbenchmark::microbenchmark(
   fun2(dat),
-  fun2alt(dat), unit = “relative”, check = “equivalent”
+  fun2alt(dat), unit = &quot;relative&quot;, check = &quot;equivalent&quot;
 )</code></pre>
 <p>The last argument, check = “equivalent”, is included to make sure that the functions return the same result.</p>
 </div>
