Moving the date of assingment 4

--- a/content/assignment/11-hw4.html
+++ b/content/assignment/11-hw4.html
@@ -7,7 +7,7 @@ output: tufte::tufte_html
 
 <div id="due-date" class="section level2">
 <h2>Due Date</h2>
-<p>October 28, 2020 by midnight Pacific time.</p>
+<p><del>October 28</del> November 4th, 2020 by midnight Pacific time.</p>
 <p>The learning objectives are to conduct data scraping and perform text mining.</p>
 </div>
 <div id="hpc" class="section level2">
